TEX-44:Post Job API Function
